# VLC_Car

./: .gitignore  README.md  sdkconfig
Hi3861/vlc/: BUILD.gn  PDv1.c
main/: CMakeLists.txt  gpio_example_main.c  main_led.c  main_pd.c
main/include/: encoder.h  light.h  motor.h  myadc.h  servo.h
main/user_drivers/: encoder.c  light.c  motor.c  servo.c
receiver/: README.md  sdkconfig  sdkconfig.old
receiver/main/: CMakeLists.txt  gpio_config.md  main.c
receiver/main/PHY/: Lookup3Hash.c  decoder.c  vlc_esp32_hardware.c
receiver/main/include/: RNG.h  constant.h  decoder.h  light.h  motor.h  myadc.h  mypid.h  mytimer.h  sensor.h  servo.h  test.h  vlc_esp32_hardware.h
receiver/main/user_drivers/: RNG.c  decoder.c  light.c  motor.c  myadc.c  mypid.c  mytimer.c  sensor.c  servo.c  test.c
test/: CMakeLists.txt  main.cpp
transmitter/: README.md  constant.h  encoder.c  mytimer.c  mytimer.h  sdkconfig  sdkconfig.old
transmitter/components/light/: CMakeLists.txt
transmitter/components/light/inc/: light.h
transmitter/components/light/src/: light.c
transmitter/components/spinalcode/: CMakeLists.txt
transmitter/components/spinalcode/inc/: RNG.h  SpinalCodeConfig.h
transmitter/components/spinalcode/src/: Lookup3Hash.c  RNG.c
transmitter/main/: CMakeLists.txt  main.c
transmitter/main/include/: constant.h  encoder.h  light.h  myadc.h  mytimer.h  test.h
transmitter/main/user_drivers/: light.c  motor.c  mytimer.c  servo.c  test.c
