idf_component_register(SRCS "main.c"
                        "./user_drivers/light.c"  
                        "./user_drivers/mytimer.c"
                        "./user_drivers/encoder.c"
                        "./user_drivers/Lookup3Hash.c"
                        "./user_drivers/RNG.c"
                        "./user_drivers/test.c"
                    INCLUDE_DIRS ".")
